# stt_ros

./: CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: pegabot.launch
resources/: set_cert.sh
scripts/: stt_node.py
