<?xml version="1.0"?>
<package format="2">
  <name>stt</name>
  <version>0.0.1</version>
  <description>The Google STT package</description>

  <maintainer email="kenny_pan@pegatroncorp.com">Kenny Pan</maintainer>
  <license>BSD</license>

  <author email="kenny_pan@pegatroncorp.com">Kenny Pan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
